--- a/inedx.html
+++ b/inedx.html
@@ -4,9 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Module: 09</title>
+    <title>Leader Board</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <div class="container">
+            <div class="top-section">
+                <h2>Top Player</h2>
+                <div class="top-players">
+                    <div class="top-player">
+                        <div class="player"><img src="images/players/player-1.png" alt=""></div>
+                        <div class="player-info"><h3>John Smith</h3></div>
+                    </div>
+                    <div class="top-player">
+                        <div class="player"><img src="images/players/player-2.png" alt=""></div>
+                        <div class="player-info"><h3>John Smith</h3></div>
+                    </div>
+                    <div class="top-player">
+                        <div class="player"><img src="images/players/player-3.png" alt=""></div>
+                        <div class="player-info"><h3>John Smith</h3></div>
+                    </div>
+                    <div class="top-player">
+                        <div class="player"><img src="images/players/player-4.png" alt=""></div>
+                        <div class="player-info"><h3>John Smith</h3></div>
+                    </div>
+                    <div class="top-player">
+                        <div class="player"><img src="images/players/player-5.png" alt=""></div>
+                        <div class="player-info"><h3>John Smith</h3></div>
+                    </div>
+                    <div class="top-player">
+                        <div class="player"><img src="images/players/player-6.png" alt=""></div>
+                        <div class="player-info"><h3>John Smith</h3></div>
+                    </div>
+                </div>
+                <hr>
+                <h2>Top Blog</h2>
+
+                <div class="top-blog">
+                    <div class="blog">
+                        <div class="blog-thumb"><img src="images/blogs/blog-1.png" alt=""></div>
+                        <div class="content">
+                            <div class="blog-info"><h3>13 of My Favorite
+                                UI/UX Goodies</h3></div>
+                            <div class="author"><span>By </span>Kamrul Hasan</div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog-thumb"><img src="images/blogs/blog-2.png" alt=""></div>
+                        <div class="content">
+                            <div class="blog-info"><h3>UI cheat sheet: 
+                                list vs grids</h3></div>
+                            <div class="author"><span>By </span>Kamrul Hasan</div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog-thumb"><img src="images/blogs/blog-3.png" alt=""></div>
+                        <div class="content">
+                            <div class="blog-info"><h3>7 typography tips 
+                                for interface design</h3></div>
+                            <div class="author"><span>By </span>Kamrul Hasan</div>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <div class="blog-thumb"><img src="images/blogs/blog-4.png" alt=""></div>
+                        <div class="content">
+                            <div class="blog-info"><h3>Your logo is 
+                                copied</h3></div>
+                            <div class="author"><span>By </span>Kamrul Hasan</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </main>
 </body>
 </html>
